--- a/appstate.json
+++ b/appstate.json
@@ -1,48 +1,39 @@
-[
+ [
     {
         "key": "dbln",
-        "value": "%7B%22100094729435307%22%3A%22N24tA1OF%22%2C%22100081181726230%22%3A%22Fz4DqyOV%22%2C%2261557135887844%22%3A%222DgzZGKp%22%2C%2261551421059261%22%3A%228X6dW7nM%22%2C%2261564415693305%22%3A%22NgmONPeO%22%2C%2261566877131291%22%3A%22G9KzGdHc%22%2C%22100065306576904%22%3A%22dVzyrcWs%22%2C%22100011502661548%22%3A%22judm1Tli%22%2C%2261551225242006%22%3A%22fNk5hJHQ%22%2C%2261567126931881%22%3A%22WWva9UXR%22%7D",
+        "value": "%7B%22100082678945310%22%3A%22NQpG9yRU%22%2C%22100093288482490%22%3A%220LZgb7Pk%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.952Z",
-        "lastAccessed": "2024-10-24T09:45:36.953Z"
-    },
-    {
-        "key": "sb",
-        "value": "dHihZNSgNOaV5cYf0opJfUPn",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.953Z",
-        "lastAccessed": "2024-10-24T09:45:36.953Z"
+        "creation": "2024-11-14T18:44:06.617Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
         "key": "datr",
-        "value": "koYUZ_fAhBheEEaTgEX-wT54",
+        "value": "REWYZaEx1sldD7CT3xcDKznH",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.953Z",
-        "lastAccessed": "2024-10-24T09:45:36.953Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
-        "key": "dpr",
-        "value": "2.1680479049682617",
+        "key": "sb",
+        "value": "REWYZQjGrRp34BrJRqOt1J7d",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.953Z",
-        "lastAccessed": "2024-10-24T09:45:36.953Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
-        "key": "ps_l",
-        "value": "1",
+        "key": "vpd",
+        "value": "v1%3B662x360x3",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.953Z",
-        "lastAccessed": "2024-10-24T09:45:36.953Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
         "key": "ps_n",
@@ -50,88 +41,88 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.953Z",
-        "lastAccessed": "2024-10-24T09:45:36.953Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
-        "key": "vpd",
-        "value": "v1%3B626x424x2.1680479049682617",
+        "key": "ps_l",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.953Z",
-        "lastAccessed": "2024-10-24T09:45:36.953Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
+    },
+    {
+        "key": "dpr",
+        "value": "3.2983407974243164",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
         "key": "locale",
-        "value": "en_US",
+        "value": "en_GB",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.953Z",
-        "lastAccessed": "2024-10-24T09:45:36.953Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
         "key": "c_user",
-        "value": "61567126931881",
+        "value": "100046189680705",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.954Z",
-        "lastAccessed": "2024-10-24T09:45:36.954Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
         "key": "fr",
-        "value": "0nE8twqVJyrzjo9nd.AWVyjz_t8S0HtGXTCIAqtWVX_dM.BnFIaS..AAA.0.0.BnGQpL.AWVqYCmR0hc",
+        "value": "18ZrdyOMI8XxG2f15.AWXU-GDaiuqK9cV7QYZvZINggdQ.BnMhJp..AAA.0.0.BnMhJp.AWV3rNM26VA",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.954Z",
-        "lastAccessed": "2024-10-24T09:45:36.954Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
         "key": "xs",
-        "value": "20%3A0DAhKG7xeZ9EeA%3A2%3A1729694284%3A-1%3A-1",
+        "value": "32%3AbSJTa5ea5avyuA%3A2%3A1731331890%3A-1%3A6024%3A%3AAcWX7R3vi2UeBz7rZ2HWyXXkEevvrAgHR6pOjYhyBw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.954Z",
-        "lastAccessed": "2024-10-24T09:45:36.954Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.1680479049682617",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.954Z",
-        "lastAccessed": "2024-10-24T09:45:36.954Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
         "key": "wd",
-        "value": "499x736",
+        "value": "327x602",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.954Z",
-        "lastAccessed": "2024-10-24T09:45:36.954Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
         "key": "fbl_st",
-        "value": "101222737%3BT%3A28829385",
+        "value": "101335061%3BT%3A28855578",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.954Z",
-        "lastAccessed": "2024-10-24T09:45:36.954Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2654%3Btimestamp%3A1729763132",
+        "value": "v2%3Bclient_version%3A2669%3Btimestamp%3A1731334767",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-10-24T09:45:36.954Z",
-        "lastAccessed": "2024-10-24T09:45:36.954Z"
+        "creation": "2024-11-14T18:44:06.628Z",
+        "lastAccessed": "2024-11-14T18:44:06.628Z"
     }
-        ]
+ ]
